create a real HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-commit #1
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>gthvn0 page</title>
+    <link rel="stylesheet" href="styles/style.css">
+  </head>
+  <body>
+    <h1>Hello</h1>
+
+    <p id="hello"></p>
+    <!––
+         script is run where it is declared. It can be in
+         the head section or in the body section
+      -->
+    <script src="scripts/hello.js"></script>
+  </body>
+</html>
