Just list the projects that are available

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <h1>Hello</h1>
-
-    <p id="hello"></p>
-    <!––
-         script is run where it is declared. It can be in
-         the head section or in the body section
-      -->
-    <script src="scripts/hello.js"></script>
+    <p>
+    localhost ~/git/projects
+    </p>
+    <p>
+    gthvn0 > ls -l
+    </p>
+    <p>
+    drwxr-xr-x  3 gthvn0 github 4096 Mar 27 2049 <a href="https://github.com/gthvn0/react-gh-pages">react-gh-pages</a>
+    </p>
   </body>
 </html>
