--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
   </head>
   <body>
     <p>
-    localhost ~/git/projects
-    </p>
-    <p>
-    gthvn0 > ls -l
-    </p>
-    <p>
-    drwxr-xr-x  3 gthvn0 github 4096 Mar 27 2049 <a href="https://github.com/gthvn0/react-gh-pages">react-gh-pages</a>
+    localhost ~/git/projects <br />
+    gthvn0 > ls -l <br />
+    drwxr-xr-x  3 gthvn0 github 4096 Mar 27 2049 react-gh-pages ->
+    <a href="https://github.com/gthvn0/react-gh-pages">https://github.com/gthvn0/react-gh-pages</a> <br />
     </p>
   </body>
 </html>
