Add description as a Readme file

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   </head>
   <body>
     <p>
-    localhost ~/git/projects <br />
-    gthvn0 > ls -l <br />
+    ┌─[±][master ✓][gthvn0.github.io] <br />
+    └─▪ cat Readme <br />
+    This web page is just listing links to projects that are <br />
+    not real ones but more playground  for testing different <br />
+    piece of code. <br />
+    ┌─[±][master ✓][gthvn0.github.io] <br />
+    └─▪ cd projects <br />
+    ┌─[±][master ✓][projects] <br />
+    └─▪ ls -l <br />
     drwxr-xr-x  3 gthvn0 github 4096 Mar 27 2049 react-gh-pages ->
     <a href="https://github.com/gthvn0/react-gh-pages">https://github.com/gthvn0/react-gh-pages</a> <br />
     </p>
