Try to copy the real repo for more funny result

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
   <body>
     <p>
     ┌─[±][master ✓][gthvn0.github.io] <br />
-    └─▪ cat Readme <br />
+    └─▪ ls -l <br />
+    -rw-r--r--  1 gthvn0 github  782 Jan  7 2047 index.html
+    -rw-r--r--  1 gthvn0 github  782 Jan  7 2047 README.md
+    drwxr-xr-x  2 gthvn0 github 4096 Mar 23 2049 projects/
+    ┌─[±][master ✓][gthvn0.github.io] <br />
+    └─▪ cat README.md <br />
     This web page is just listing links to projects that are <br />
     not real ones but more playground  for testing different <br />
     piece of code. <br />
     ┌─[±][master ✓][gthvn0.github.io] <br />
-    └─▪ cd projects <br />
-    ┌─[±][master ✓][projects] <br />
-    └─▪ ls -l <br />
-    drwxr-xr-x  3 gthvn0 github 4096 Mar 27 2049 react-gh-pages ->
+    └─▪ ls -l projects <br />
+    lrwxrwxrwx  3 gthvn0 github 4096 Mar 27 2049 react-gh-pages ->
     <a href="https://github.com/gthvn0/react-gh-pages">https://github.com/gthvn0/react-gh-pages</a> <br />
     </p>
   </body>
