--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <p>
     ┌─[±][master ✓][gthvn0.github.io] <br />
     └─▪ ls -l <br />
-    -rw-r--r--  1 gthvn0 github  782 Jan  7 2047 index.html
-    -rw-r--r--  1 gthvn0 github  782 Jan  7 2047 README.md
-    drwxr-xr-x  2 gthvn0 github 4096 Mar 23 2049 projects/
+    -rw-r--r--  1 gthvn0 github  782 Jan  7 2047 index.html <br />
+    -rw-r--r--  1 gthvn0 github  782 Jan  7 2047 README.md  <br />
+    drwxr-xr-x  2 gthvn0 github 4096 Mar 23 2049 projects/  <br />
     ┌─[±][master ✓][gthvn0.github.io] <br />
     └─▪ cat README.md <br />
     This web page is just listing links to projects that are <br />
     not real ones but more playground  for testing different <br />
     piece of code. <br />
     ┌─[±][master ✓][gthvn0.github.io] <br />
-    └─▪ ls -l projects <br />
+    └─▪ ls -l projects/ <br />
     lrwxrwxrwx  3 gthvn0 github 4096 Mar 27 2049 react-gh-pages ->
     <a href="https://github.com/gthvn0/react-gh-pages">https://github.com/gthvn0/react-gh-pages</a> <br />
     </p>
