Add new links to playground

--- a/index.html
+++ b/index.html
@@ -7,26 +7,38 @@
   </head>
   <body>
     <p>
-    ┌─[±][master ✓][gthvn0.github.io] <br />
-    └─▪ ls -l <br />
-    -rw-r--r--  1 gthvn0 github  782 Jan  7 2047 index.html <br />
-    -rw-r--r--  1 gthvn0 github  782 Jan  7 2047 README.md  <br />
-    drwxr-xr-x  2 gthvn0 github 4096 Mar 23 2049 projects/  <br />
+    ┌─[±][master ✓][gthvn0.github.io]  <br />
+    └─▪ ls -l  <br />
+    -rw-r--r--  1 gthvn0 github 1782 Jan 7 2047 index.html <br />
+    -rw-r--r--  1 gthvn0 github 1151 Jan 7 2047 README.md <br />
+    drwxr-xr-x  2 gthvn0 github 4096 Mar 3 2049 playgrounds/ <br />
+    drwxr-xr-x  7 gthvn0 github 4096 Mar 1 2049 webpage/ <br />
     </p>
 
     <p>
-    ┌─[±][master ✓][gthvn0.github.io] <br />
-    └─▪ cat README.md <br />
+    ┌─[±][master ✓][gthvn0.github.io]  <br />
+    └─▪ cat README.md  <br />
     This web page is just listing links to projects that are <br />
     not real ones but more playground  for testing different <br />
     piece of code. <br />
     </p>
-    
+
     <p>
     ┌─[±][master ✓][gthvn0.github.io] <br />
-    └─▪ ls -l projects/ <br />
+    └─▪ ls -l webpage/ <br />
     lrwxrwxrwx  3 gthvn0 github 4096 Mar 27 2049 react-gh-pages ->
-    <a href="https://github.com/gthvn0/react-gh-pages">https://github.com/gthvn0/react-gh-pages</a> <br />
+    <a href="https://gthvn0.github.io/react-gh-pages/">https://gthvn0.github.io/react-gh-pages/</a>  <br />
+    </p>
+
+    <p>
+    ┌─[±][master ✓][gthvn0.github.io] <br />
+    └─▪ ls -l playgrounds/ <br />
+    lrwxrwxrwx  13 gthvn0 github 4096 Dec 12 2048 Haskell ->
+    <a href="https://github.com/gthvn0/haskell_kindergarten">https://github.com/gthvn0/haskell_kindergarten</a> <br />
+    lrwxrwxrwx  13 gthvn0 github 4096 Dec 14 2048 OCaml ->
+    <a href="https://github.com/gthvn0/ocaml_kindergarten">https://github.com/gthvn0/ocaml_kindergarten</a>  <br />
+    lrwxrwxrwx  13 gthvn0 github 4096 Dec 12 2048 Rust ->
+    <a href="https://github.com/gthvn0/rust_kindergarten">https://github.com/gthvn0/rust_kindergarten</a>  <br />
     </p>
   </body>
 </html>
