--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <p>
+    Welcome to gthvn0 Terminal! <br />
+    01/01/2097, 0:12:31 AM <br />
+    <br />
+    ┌─[±][master ✓][gthvn0.github.io]  <br />
+    └─▪ ls -l  <br />
+    </p>
+    <p>
     ┌─[±][master ✓][gthvn0.github.io]  <br />
     └─▪ ls -l  <br />
     -rw-r--r--  1 gthvn0 github 1782 Jan 7 2047 index.html <br />
