Fix welcome message

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <p>
-    Welcome to gthvn0 Terminal! <br />
+    Welcome to gthvn0 Webminal! <br />
     01/01/2097, 0:12:31 AM <br />
     <br />
     ┌─[±][master ✓][gthvn0.github.io]  <br />
-    └─▪ ls -l  <br />
+    └─▪ <br />
     </p>
     <p>
     ┌─[±][master ✓][gthvn0.github.io]  <br />
