--- a/index.html
+++ b/index.html
@@ -6,46 +6,36 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <p>
-    Welcome to gthvn0 Webminal! <br />
-    01/01/2097, 0:12:31 AM <br />
-    <br />
-    ┌─[±][master ✓][gthvn0.github.io]  <br />
-    └─▪ <br />
-    </p>
-    <p>
-    ┌─[±][master ✓][gthvn0.github.io]  <br />
-    └─▪ ls -l  <br />
-    -rw-r--r--  1 gthvn0 github 1782 Jan 7 2047 index.html <br />
-    -rw-r--r--  1 gthvn0 github 1151 Jan 7 2047 README.md <br />
-    drwxr-xr-x  2 gthvn0 github 4096 Mar 3 2049 playgrounds/ <br />
-    drwxr-xr-x  7 gthvn0 github 4096 Mar 1 2049 webpage/ <br />
-    </p>
+    <pre>
 
-    <p>
-    ┌─[±][master ✓][gthvn0.github.io]  <br />
-    └─▪ cat README.md  <br />
-    This web page is just listing links to projects that are <br />
-    not real ones but more playground  for testing different <br />
-    piece of code. <br />
-    </p>
+    <span id="title">Welcome to gthvn0 Webminal!</span>
+    <span id="title">01/01/2097, 0:12:31 AM</span>
 
-    <p>
-    ┌─[±][master ✓][gthvn0.github.io] <br />
-    └─▪ ls -l webpage/ <br />
-    lrwxrwxrwx  3 gthvn0 github 4096 Mar 27 2049 react-gh-pages ->
-    <a href="https://gthvn0.github.io/react-gh-pages/">https://gthvn0.github.io/react-gh-pages/</a>  <br />
-    </p>
+    ┌─[±][<span id="git">master ✓</span>][<span id="path">~/gthvn0.github.io</span>]
+    └─▪ <span id="command">ls -l</span>
+    -rw-r--r--  1 gthvn0 github 1782 Jan 7 2047 index.html
+    -rw-r--r--  1 gthvn0 github 1151 Jan 7 2047 README.md
+    drwxr-xr-x  2 gthvn0 github 4096 Mar 3 2049 playgrounds/
+    drwxr-xr-x  7 gthvn0 github 4096 Mar 1 2049 webpage/
 
-    <p>
-    ┌─[±][master ✓][gthvn0.github.io] <br />
-    └─▪ ls -l playgrounds/ <br />
-    lrwxrwxrwx  13 gthvn0 github 4096 Dec 12 2048 Haskell ->
-    <a href="https://github.com/gthvn0/haskell_kindergarten">https://github.com/gthvn0/haskell_kindergarten</a> <br />
-    lrwxrwxrwx  13 gthvn0 github 4096 Dec 14 2048 OCaml ->
-    <a href="https://github.com/gthvn0/ocaml_kindergarten">https://github.com/gthvn0/ocaml_kindergarten</a>  <br />
-    lrwxrwxrwx  13 gthvn0 github 4096 Dec 12 2048 Rust ->
-    <a href="https://github.com/gthvn0/rust_kindergarten">https://github.com/gthvn0/rust_kindergarten</a>  <br />
-    </p>
+    ┌─[±][<span id="git">master ✓</span>][<span id="path">~/gthvn0.github.io</span>]
+    └─▪ <span id="command">cat README.md</span>
+    This web page is just listing links to projects that are not real ones but
+    more playgrounds for testing different concepts and different programming languages.
+
+    ┌─[±][<span id="git">master ✓</span>][<span id="path">~/gthvn0.github.io</span>]
+    └─▪ <span id="command">ls -l webpage/</span>
+    lrwxrwxrwx  3 gthvn0 github 4096 Mar 27 2049 react-gh-pages -> <a href="https://gthvn0.github.io/react-gh-pages/">https://gthvn0.github.io/react-gh-pages/</a>
+
+    ┌─[±][<span id="git">master ✓</span>][<span id="path">~/gthvn0.github.io</span>]
+    └─▪ <span id="command">ls -l playgrounds</span>
+    lrwxrwxrwx  13 gthvn0 github 4096 Dec 12 2048 Haskell -> <a href="https://github.com/gthvn0/haskell_kindergarten">https://github.com/gthvn0/haskell_kindergarten</a>
+    lrwxrwxrwx  13 gthvn0 github 4096 Dec 14 2048 OCaml -> <a href="https://github.com/gthvn0/ocaml_kindergarten">https://github.com/gthvn0/ocaml_kindergarten</a>
+    lrwxrwxrwx  13 gthvn0 github 4096 Dec 12 2048 Rust -> <a href="https://github.com/gthvn0/rust_kindergarten">https://github.com/gthvn0/rust_kindergarten</a>
+
+    ┌─[±][<span id="git">master ✓</span>][<span id="path">~/gthvn0.github.io</span>]
+    └─▪ <span id="prompt">_</span>
+
+    </pre>
   </body>
 </html>
