Add the translation of brainfuck code in the BIO ;-)

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     lrwxrwxrwx  13 gthvn0 github 4096 Dec 12 2048 Rust -> <a href="https://github.com/gthvn0/rust_kindergarten">https://github.com/gthvn0/rust_kindergarten</a>
 
     ┌─[±][<span id="git">master ✓</span>][<span id="path">~/gthvn0.github.io</span>]
+    └─▪ <span id="command">echo "+++++ +++ [ >+++++ + [ >+>++>++<<<- ] >>+>++>+ [ < ] <- ] >>>-.>++++.<+.>++.--------.<<.>>>." | bf </span>
+    gthvn0
+
+
+    ┌─[±][<span id="git">master ✓</span>][<span id="path">~/gthvn0.github.io</span>]
     └─▪ <span id="prompt">_</span>
 
     </pre>
