need to fix the bf

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     ┌─[±][<span id="git">master ✓</span>][<span id="path">~/gthvn1.github.io</span>]
     └─▪ <span id="command">echo "+++++ +++ [ >+++++ + [ >+>++>++<<<- ] >>+>++>+ [ < ] <- ] >>>-.>++++.<+.>++.--------.<<.>>>." | bf </span>
-    gthvn
+    gthvn0
 
     ┌─[±][<span id="git">master ✓</span>][<span id="path">~/gthvn1.github.io</span>]
     └─▪ <span id="prompt">_</span>
