--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 
   <p>Before the script...</p>
 
-  <script>
-    alert( 'Hello, world!' );
-  </script>
+  <script src="https://github.com/gthvn1/gthvn1.github.io/script1.js> </script>
 
   <p>...After the script.</p>
 
