--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <p>Before the script...</p>
 
-  <script src="https://github.com/gthvn1/gthvn1.github.io/script1.js> </script>
+  <script src="https://github.com/gthvn1/gthvn1.github.io/script1.js"> </script>
 
   <p>...After the script.</p>
 
