use relative path

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <p>Before the script...</p>
 
-  <script src="https://raw.githubusercontent.com/gthvn1/gthvn1.github.io/master/scripts/script1.js"></script>
+  <script src="scripts/script1.js"></script>
 
   <p>...After the script.</p>
 
