--- a/docs.old-site/index.html
+++ b/docs.old-site/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="https://clojurescript.org/images/cljs-logo-icon-32.png">
   </head>
   <body>
-    Winter is coming...
+    <div id="app">
+    </div> <!-- end of app div -->
+    <script src="cljs-out/dev-main.js" type="text/javascript"></script>
   </body>
 </html>
